fix(core/toggle): break label text in case of overflow (#1947)

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -15,7 +15,8 @@
   display: inline-flex;
   flex-direction: row;
   position: relative;
-  height: 1.5rem;
+  min-height: 1.5rem;
+  max-height: calc(100% - 0.5rem);
   margin-block-start: 0.25rem;
   margin-block-end: 0.25rem;
 
@@ -27,16 +28,17 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
   }
 
   .label {
-    display: inline-block;
+    word-break: break-word;
+    display: block;
     white-space: normal;
     overflow: hidden;
-    text-overflow: ellipsis;
     margin-block-start: 0.125rem;
     margin-inline-start: 0.5rem;
+    min-height: 1rem;
   }
 
   .switch {
